--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "dependencies": {
     "@solid-primitives/event-listener": "^2.3.3",
+    "@solid-primitives/raf": "^2.2.0",
     "@solid-primitives/scheduled": "^1.4.3",
+    "@solid-primitives/scroll": "^2.0.23",
     "clsx": "^2.1.1",
     "lucide-solid": "^0.418.0",
     "solid-js": "^1.8.11",
