--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "vite-template-solid",
+  "homepage": "https://sethwololo.github.io/scrollytelling",
+  "name": "scrollytelling-demo",
   "type": "module",
-  "version": "0.0.0",
+  "private": true,
+  "version": "1.0.0",
   "description": "",
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "build": "tsc -b && vite build",
+    "serve": "vite preview",
+    "predeploy": "bun run build",
+    "deploy": "gh-pages -d dist"
   },
   "license": "MIT",
   "devDependencies": {
@@ -18,6 +22,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-solid": "^0.14.1",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.40",
     "solid-devtools": "^0.29.2",
     "tailwindcss": "^3.4.7",
@@ -28,8 +33,6 @@
   "dependencies": {
     "@solid-primitives/event-listener": "^2.3.3",
     "@solid-primitives/raf": "^2.2.0",
-    "@solid-primitives/scheduled": "^1.4.3",
-    "@solid-primitives/scroll": "^2.0.23",
     "clsx": "^2.1.1",
     "lucide-solid": "^0.418.0",
     "solid-js": "^1.8.11",
