--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "serve": "vite preview",
     "predeploy": "bun run build",
     "deploy": "gh-pages -d dist"
